<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/jobListFragment"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/jobMapFragment"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/menu_map" />
    <item
        android:id="@+id/publishFragment"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/publish" />
    <item
        android:id="@+id/messagesFragment"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="Mensajes" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="Perfil" />
</menu>

